--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,9 +3,17 @@
 body {
     font-family: "Lucida Grande", "Lucida Sans", "Lucida Sans Regular",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font-size: 1em;
     margin: 0px;
     padding: 0px;
 }
+
+h1 {
+    font-family: Georgia, "Times New Roman", Times, serif;
+    font-weight: bold;
+    font-size: 2em;
+}
+
 
 /* Home Page 
 -------------*/
@@ -59,11 +67,6 @@ nav ul {
     left: 60%;
     top: 20%;
     bottom: 25%;
-}
-
-.welcome__content h1 {
-    font-family: Georgia, "Times New Roman", Times, serif;
-    font-weight: bold;
 }
 
 .welcome p {
@@ -178,7 +181,6 @@ footer a {
     margin-left: 50px;
 }
 
-
 /* Links 
 -------------*/
 
@@ -194,6 +196,7 @@ a {
     font-size: 1em;
     color: white;
     transition-duration: 1s;
+    font-weight: bold;
 }
 
 .cta:hover {
@@ -204,4 +207,10 @@ a {
     position: absolute;
     bottom: 20px;
     left: 20px;
+}
+
+
+i{
+    font-size: large;
+    margin: 0px 10px 0px 0px;
 }
