--- a/styles/about.css
+++ b/styles/about.css
@@ -3,7 +3,7 @@
 .about__section {
     text-align: center;
     max-width: 900px;
-    margin: 90px auto;
+    margin: 70px auto;
     padding: 0px 30px;
 }
 
@@ -15,7 +15,7 @@
 .about__background {
     background-image: url("../images/about-img.jpg");
     background-size: cover;
-    background-position-y: -220px;
+    background-position:center;
     background-repeat: no-repeat;
     min-height: 50vh;
 }
