--- a/styles/success.css
+++ b/styles/success.css
@@ -13,7 +13,7 @@ main {
     color: #08BA5B;
 }
 
-.back-to-home {
+.btn-dark-green {
     background-color: #0b3a40;
     border-radius: 20px;
     max-width: 250px;
