--- a/styles/payment.css
+++ b/styles/payment.css
@@ -1,13 +1,3 @@
-header {
-    display: flex;
-    justify-content: space-between;
-    max-width: 50vw;
-    margin-left: 44vw;
-}
-
-main {
-    mIN-height: 77vh;
-}
 
 .payment-help {
     margin: auto 0px;
@@ -15,9 +5,8 @@ main {
 
 .payment-status {
     display: flex;
-    justify-content: center;
-    margin: 60px auto;
-    max-width: 90vw;
+    justify-content: space-between;
+    margin: 50px 20px;
 }
 
 .payment-icon {
@@ -42,8 +31,7 @@ main {
 
 .payment-info {
     display: flex;
-    margin: 40px auto;
-    max-width: 40vw;
+    margin: 20px;
 }
 
 .payment-info > * {
@@ -56,21 +44,10 @@ input {
     margin: 3px 0px;
     padding: 7px;
 }
-.mm-yy {
-    display: flex;
-}
 
-#name {
-    flex: 1;
-    margin-right: 5px;
-}
-
-#year {
-    flex: 1;
-}
 
 .payment-checkbox {
-margin: 10px 0px;
+    margin: 10px 0px;
 }
 
 .payment-cta {
