--- a/styles/shopping-bag.css
+++ b/styles/shopping-bag.css
@@ -1,32 +1,24 @@
-main {
-    margin: 100px;
+.shopping-bag__main {
+    margin: 20px;
     min-height: 60vh;
 }
 
 h1 {
-    margin: 100px 0px;
+    margin: 50px 0px;
 }
 
-.product__wrapper {
-    display: flex;
-}
+
 .product__info, .summmary__section {
     flex: 1;
 }
 
-.product__info {
-    max-width: 40vw;
-    margin-right: 5vw;
-}
-
 .product-added{
     border: 1px solid black;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    padding: 20px 0px;
 }
 
+.product-added img {
+    min-width: 150px;
+}
 .added1 {
     border-bottom: none;
 }
@@ -53,7 +45,7 @@ select {
 .summmary__section {
     display:flex;
     flex-direction: column;
-    max-width: 20vw;
+    margin-top: 50px;
 }
 
 .summary {
@@ -68,6 +60,7 @@ select {
     display: flex;
     justify-content: space-between;
 }
+
 .summary-btn {
     text-align: center;
     margin-top: 10px;
