--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,10 +14,6 @@ h1 {
     font-size: 2em;
 }
 
-
-/* Home Page 
--------------*/
-
 /* Header */
 header {
     display: flex;
@@ -27,7 +23,6 @@ header {
 }
 
 nav {
-    margin-left: 80px;
     display: none;
     position: fixed;
     top: 70px;
@@ -49,11 +44,13 @@ nav li{
 
 .icon-wrapper li {
     list-style: none;
+    padding: 0px;
+   
 }
 
 .icon-wrapper {
     display: flex;
-    margin-left: 20vw;
+    margin: 0px 20px 10px 20px;
 }
 
 #hamburger-menu {
@@ -69,97 +66,10 @@ nav li{
 }
 
 .search-wrapper {
-    position: relative;
-    max-width: 60px;
-    display: inline-block;
-}
-
-.search-box{
-    border-radius: 10px;
-    border: 2px solid #d3d2d2;
-}
-
-.search-icon {
-    position: absolute;
-    left: 150px;
-    top: 25px;
-}
-
-.welcome {
-    background-image: url("../images/background.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    min-height: 70vh;
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    position: relative;
-  }
-  
-.welcome__content {
-    background-color: white;
-    min-height: 30vh;
-    padding:40px 70px;
-    margin: auto 0;
-}
-
-.welcome p {
-    padding-top: 10px;
-    padding-bottom: 20px;
-}
-
-.service {
     display: none;
 }
 
-.explore {
-    display: grid;
-    grid-template-columns: 1fr;
-    max-width: 1700px;
-    font-size: 0.9em;
-    margin: 20px 20px 50px 20px;
-    grid-gap: 10px;
-}
-
-.explore__men {
-    background-image: url("../images/explore-pic.jpg");
-}
-
-.explore__women {
-    background-image: url("../images/explore-pic2.jpg");
-}
-.explore-size {
-    background-size: cover;
-    background-position: center;
-    min-height: 60vh;
-    max-width: 100vw;
-    position: relative;
-    margin-top: 5px;
-}
-
-.review {
-    background-color:#EFEFEF;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 30px;
-}
-
-.review__customer h2 {
-    text-align: center;
-}
-.review__customer {
-    max-width: 400px;
-    margin-top: 20px;
-    font-size:1em;
-    margin: auto;
-}
-.review__image {
-    border-radius: 50%;
-    max-width: 240px;
-    margin: 0px auto;
-}
-
+/* Popular products */
 .popular-products {
     display: grid;
     grid-template-columns: 1fr;
@@ -206,13 +116,18 @@ footer {
     padding: 10px;   
     color:white;
 }
+
 footer a {
     color: white;
 }
 
-
 /* Links 
 -------------*/
+
+.active {
+    border-bottom: 2px solid black;
+    padding-bottom: 3px;
+}
 
 a {
     text-decoration: none;
@@ -253,193 +168,30 @@ a {
     margin: 20px auto;
 }
 
+.cta-cart {
+    text-align: center;
+    border-radius: 20px;
+    padding: 5px 0px;
+    margin: 0px 5px 0px 0px;
+}
+
+.product-heart {
+    border: 2px solid #0b3a40;
+    border-radius: 20px;
+}
+
+.heart-icon {
+    text-align: center;
+    margin: auto;
+    color: #0b3a40;
+}
 .shop {
     position: absolute;
     bottom: 20px;
     left: 20px;
 }
 
-
 i{
     font-size: large;
     margin: 0px 10px 0px 0px;
-}
-
-@media (min-width: 400px) {
-    .icon-wrapper {
-        margin-left: 37vw;
-    }
-}
-
-@media (min-width: 450px) {
-    .icon-wrapper {
-        margin-left: 45vw;
-    }
-}
-
-@media (min-width: 500px) {
-    .icon-wrapper {
-        margin-left: 50vw;
-    }
-}
-
-@media (min-width: 650px) {
-     header {
-         margin: 20px 50px;
-     }
-
-    .icon-wrapper {
-        margin-left: 55vw;
-    }
- 
-    .service {
-        display: flex;
-        margin: 20px auto;
-        max-width: 90vw;
-    }
-    
-    .service > *{
-        flex: 1;
-        text-align: center;
-        font-size: 0.9em;
-        padding: 0px 25px;
-        max-width: 500px;
-    }
-
-    .review {
-        flex-direction: row;
-    }
-     
-    .review__image {
-        margin: 0px;
-    }
-    .review__customer h2 {
-        text-align: left;
-    }
-    .review__customer {
-        max-width: 500px;
-        margin: 0px 0px 0px 50px;  
-    }
-    .popular-products {
-        grid-template-columns: repeat(2, 1fr);
-        margin: 50px auto;
-    }
-
-    footer {
-        padding: 10px 50px;
-    }
-
-    /* shop */ 
-    .product__content {
-        display: grid;
-        grid-template-columns: 1fr 4fr;
-        grid-template-areas: 
-        'categories filter'
-        'categories products';
-        margin: 20px 60px 50px 20px;
-        grid-gap: 30px;
-    }
-
-    /* Contact */
-    .main__contact {
-        display: flex;
-        margin: 120px auto;
-        max-width: 1300px;
-        height: 58vh;
-    }
-
-    .contact__info, .contact__form{
-        padding: 0px 25px;
-}
-
-@media (min-width: 800px){
-    .icon-wrapper {
-        margin-left: 60vw;
-    }
-}
-@media (min-width: 1100px) {
-
-    header {
-        display: flex;
-        justify-content: space-between;
-        margin: 20px 70px;
-    }
-    .icon-wrapper {
-        margin: 0px;
-        padding: 0px;
-    }
-
-    nav {
-        display: flex;
-        position: static;
-        align-items: center;
-        min-width: 700px;
-    }
-
-    nav li {
-        display: inline-block;
-    }
-
-    .hamburger {
-        display: none;
-    }
-    
-    .search-icon {
-        position: absolute;
-        left: 175px;
-        top: 28px;
-    }
-    
-    .welcome__img {
-        background-image: url("../images/welcome-img.jpg");
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-        position: absolute;
-        width: 36%;
-        height: 70%;
-        top: 15%;
-        right: 4vw;
-        bottom: 25vw;
-    }
-
-    .welcome p {
-        max-width: 400px;
-    }
-    .explore {
-        grid-template-columns: repeat(2, 1fr);
-        margin: 30px auto;
-    }
-    .popular-products {
-        grid-template-columns: repeat(4, 1fr);
-        margin: 50px auto;
-    }
-
-    /* shop */
-    .popular-products {
-        grid-template-columns: repeat(4, 1fr);
-    }
-    .filter {
-        grid-area: filter;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        justify-content: space-between;
-        align-content: end;
-        margin: 30px 0px 5px 0px;
-    }
-
-    
-    
-}
-
-@media (min-width: 1300px) {
-    .welcome__content {
-        padding-left: 200px;
-    }
-
-    .welcome__img {
-        width: 460px;
-        height: 500px;
-        right: 10vw;
-    }
 }
