--- a/styles/success.css
+++ b/styles/success.css
@@ -1,31 +1,25 @@
 
-main {
+.success__main {
     display: flex;
-    margin: 150px auto;
-    max-width: 1000px;
+    margin: auto;
     flex-direction:column;
     text-align: center;
-    height:52vh;
+    min-height: 80vh;
+    min-width: 30vw;
+    padding: 20px;
 }
 
+.contact__success {
+    margin: 70px auto 0px auto;
+    min-height: 70vh;
+}
 .icon-success {
     margin: 50px;
     color: #08BA5B;
 }
 
-.checkout-nav{
-    display: flex;
-    justify-content: space-between;
-    max-width: 50vw;
-    margin-left: 44vw;
-}
-
 #checkout-help{
     margin: auto 0px;
-}
-.checkout-main {
-    max-width: 30vw;
-    margin: 0px auto;
 }
 
 .checkout-cta {
