--- a/css/media.css
+++ b/css/media.css
@@ -1,6 +1,7 @@
 /** @format */
 
 @media (min-width: 400px) {
+  /* Checkout payment */
   .mm-yy {
     display: flex;
   }
@@ -14,6 +15,7 @@
     flex: 1;
   }
 }
+
 @media (min-width: 650px) {
   header {
     margin: 20px 50px;
@@ -40,17 +42,21 @@
   .review__image {
     margin: 0px;
   }
+
   .review__customer h2 {
     text-align: left;
   }
+
   .review__customer {
     max-width: 500px;
     margin: 0px 0px 0px 50px;
   }
+
   .popular-products {
     grid-template-columns: repeat(2, 1fr);
     margin: 50px 20px;
   }
+
   .product {
     margin-top: 40px;
   }
@@ -59,7 +65,7 @@
     padding: 10px 50px;
   }
 
-  /* shop */
+  /* Shop */
   .product__content {
     display: grid;
     grid-template-columns: 1fr 4fr;
@@ -70,8 +76,8 @@
     gap: 30px;
   }
 
-  /* Contact */
-  .main__contact {
+  /* Contact us */
+  .contact__main {
     display: flex;
     margin: 120px auto;
     max-width: 1300px;
@@ -83,7 +89,7 @@
     padding: 0px 25px;
   }
 
-  /* favorites */
+  /* Favorites */
   .favorites {
     grid-template-columns: repeat(2, 1fr);
     margin: 50px 100px;
@@ -94,7 +100,7 @@
     grid-template-columns: repeat(2, 1fr);
   }
 
-  /* checkout payment */
+  /* Checkout payment */
   .payment-status {
     display: flex;
     justify-content: center;
@@ -106,22 +112,23 @@
     max-width: 20vw;
   }
 
-  /* checkout success */
+  /* Checkout success */
   .success__main {
     max-width: 70vw;
   }
 
-  /* product */
+  /* Seasonal autumn black */
   .product__links {
     font-size: 1em;
   }
 }
 
 @media (min-width: 800px) {
-  /*shopping-bag */
+  /* Shopping-bag */
   .shopping-bag__main {
     margin: 100px;
   }
+
   .product-added {
     display: flex;
     justify-content: space-evenly;
@@ -129,23 +136,24 @@
     padding: 20px 0px;
   }
 
-  /* checkout payment*/
+  /* Checkout payment*/
   .payment-info {
     margin: 40px 25%;
   }
-  /* checkout success */
+
+  /* Checkout success */
   .success__main {
     max-width: 60vw;
   }
 }
 
 @media (min-width: 1000px) {
-  /* checkout payment */
+  /* Checkout payment */
   .payment-info {
     margin: 40px 28%;
   }
 
-  /* checkout success */
+  /* Checkout success */
   .success__main {
     max-width: 40vw;
   }
@@ -172,6 +180,7 @@
     justify-content: space-between;
     margin: 20px 70px;
   }
+
   .icon-wrapper {
     margin: 0px 0px 0px 160px;
   }
@@ -190,6 +199,7 @@
   #hamburger-menu:checked ~ nav {
     display: inline-flex;
   }
+
   .search-wrapper {
     position: relative;
     max-width: 60px;
@@ -233,21 +243,23 @@
   .welcome p {
     max-width: 400px;
   }
+
   .explore {
     grid-template-columns: repeat(2, 1fr);
     margin: 50px auto;
   }
+
   .popular-products {
     grid-template-columns: repeat(4, 1fr);
   }
 
-  /* favorites */
+  /* Favorites */
   .favorites {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  /* shop */
-  .filter {
+  /* Shop */
+  .product-filter {
     grid-area: filter;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -256,12 +268,12 @@
     margin: 30px 0px 5px 0px;
   }
 
-  /* login */
+  /* Login */
   .login__form > * {
     max-width: 20vw;
   }
 
-  /*checkout payment */
+  /* Checkout payment */
   .payment-status {
     margin: 60px auto;
     max-width: 90vw;
@@ -271,13 +283,12 @@
     margin: 40px 34%;
   }
 
+  /* Seasonal autumn black */
   .product__img,
   .seasonal-autumn {
     display: flex;
     flex: 1;
   }
-
-  
 }
 
 @media (min-width: 1300px) {
@@ -327,14 +338,14 @@
     margin-left: 100px;
     margin: 50px 0px 50px 100px;
   }
-  
+
   .seasonal-autumn {
     margin: 0px 100px;
   }
 }
 
 @media (min-width: 1600px) {
-  /*shopping bag*/
+  /* Shopping-bag*/
   .product__wrapper {
     display: flex;
   }
@@ -347,14 +358,15 @@
     margin-top: 0px;
     max-width: 20vw;
   }
-  /* checkout success */
+
+  /* Checkout success */
   .success__main {
     max-width: 30vw;
   }
 }
 
 @media (min-width: 1800px) {
-  /* checkout payment */
+  /* Checkout payment */
   .payment-info {
     margin: 40px auto;
   }
