--- a/css/payment.css
+++ b/css/payment.css
@@ -1,69 +1,70 @@
-.form_size {
-    min-width: 500px;
+.payment-form__size {
+  min-width: 500px;
 }
+
 .payment-help {
-    margin: auto 0px;
+  margin: auto 0px;
 }
 
 .payment-status {
-    display: flex;
-    justify-content: space-between;
-    margin: 50px 20px;
+  display: flex;
+  justify-content: space-between;
+  margin: 50px 20px;
 }
 
 .payment-icon {
-    color: var(--color-dark-blue);
+  color: var(--color-dark-blue);
 }
 
 .payment-icon_next {
-    color: #707070;
+  color: #707070;
 }
+
 .payment-status > * {
-    flex: 1;
-    text-align: center;
-    font-size: 0.8em;
-    max-width: 15vw;
+  flex: 1;
+  text-align: center;
+  font-size: 0.8em;
+  max-width: 15vw;
 }
 .payment-title {
-    text-align: center;
-    padding: 20px 0px;
-    border-bottom: 1px solid #707070;
-    border-top: 1px solid #707070;
+  text-align: center;
+  padding: 20px 0px;
+  border-bottom: 1px solid #707070;
+  border-top: 1px solid #707070;
 }
 
 .payment-info {
-    display: flex;
-    margin: 20px;
+  display: flex;
+  margin: 20px;
 }
 
 .payment-info > * {
-    display: flex;
-    flex: 1;
-    flex-direction: column;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
 }
 
 input {
-    margin: 3px 0px;
-    padding: 7px;
+  margin: 3px 0px;
+  padding: 7px;
 }
 
-
 .payment-checkbox {
-    margin: 10px 0px;
+  margin: 10px 0px;
 }
 
 .payment-cta {
-    display: flex;
+  display: flex;
 }
 
 .payment-btn {
-    flex: 1;
-    font-weight: lighter;
-    margin: 0px;
-    text-align: center;
-    max-width: 100%;
+  flex: 1;
+  font-weight: lighter;
+  margin: 0px;
+  text-align: center;
+  max-width: 100%;
 }
 
 .back {
-    margin-right: 5px;
+  margin-right: 5px;
 }
