--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,7 @@
 @import "imports/variables.css";
 
 body {
-  font-family: "Lucida Grande", "Lucida Sans", "Lucida Sans Regular",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Grande", "Lucida Sans", "Lucida Sans Regular", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 1em;
   margin: 0px;
   padding: 0px;
