--- a/css/payment.css
+++ b/css/payment.css
@@ -31,13 +31,18 @@
 
 .payment-info {
   display: flex;
-  margin: 20px;
+  max-width: 400px;
+  margin: 20px auto;
 }
 
 .payment-info > * {
   display: flex;
   flex: 1;
   flex-direction: column;
+}
+
+.payment-info h2{
+  text-align: center;
 }
 
 input {
@@ -51,6 +56,7 @@ input {
 
 .payment-cta {
   display: flex;
+  margin-bottom: 20px;
 }
 
 .payment-btn {
