--- a/css/media.css
+++ b/css/media.css
@@ -57,8 +57,22 @@
     margin: 50px 20px;
   }
 
+  .shop-section{
+    margin: 0 auto;
+  }
+
   .product {
     margin-top: 40px;
+  }
+
+  /* Product */
+  .main-wrapper{
+    flex-direction: row;
+    margin-top: 50px;
+  }
+
+  .product__links {
+    margin-left: 40px;
   }
 
   footer {
@@ -112,7 +126,7 @@
     max-width: 70vw;
   }
 
-  /* Seasonal autumn black */
+  /* Product */
   .product__links {
     font-size: 1em;
   }
@@ -135,6 +149,16 @@
   .success__main {
     max-width: 60vw;
   }
+
+  /* Product*/
+  .main-wrapper{
+    max-width: 1000px;
+  }
+
+  .product-details__image{
+    height: 400px;
+    width: 300px;
+  }
 }
 
 @media (min-width: 1000px) {
@@ -144,19 +168,9 @@
     max-width: 40vw;
   }
 
-  /* Seasonal autumn black */
-  .main-wrapper {
-    flex-direction: row;
-  }
-
-  .seasonal-autumn__products-wrapper {
-    display: grid;
-    grid-template-columns: auto 1fr;
-    grid-template-rows: auto 1fr;
-    grid-template-areas:
-      "img2 img1"
-      "img3 img1";
-    gap: 0px 8px;
+  /* Product */
+  .seasonal-autumn{
+    max-width: 400px;
   }
 }
 
@@ -267,7 +281,7 @@
     max-width: 90vw;
   }
 
-  /* Seasonal autumn black */
+  /* Product */
   .product__img,
   .seasonal-autumn {
     display: flex;
@@ -288,6 +302,10 @@
 
   .popular-products {
     margin: 50px auto;
+  }
+
+  .shop-section{
+    margin: 0 auto;
   }
 
   /* Login  */
@@ -316,13 +334,7 @@
     left: 20px;
   }
 
-  /* Seasonal autumn black */
-  .seasonal-autumn__main {
-    margin-top: 50px;
-    margin-left: 100px;
-    margin: 50px 0px 50px 100px;
-  }
-
+  /* Product */
   .seasonal-autumn {
     margin: 0px 100px;
   }
