--- a/css/product.css
+++ b/css/product.css
@@ -1,7 +1,7 @@
 /** @format */
 
 .seasonal-autumn__main {
-  margin: 50px 20px;
+  margin: 20px;
 }
 
 .product__links {
@@ -14,43 +14,15 @@
   min-height: 65vh;
 }
 
-.seasonal-autumn__products-wrapper {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  grid-template-rows: auto 1fr;
-  grid-template-areas:
-    "img1 img1"
-    "img2 img3";
-  gap: 0px 8px;
-  margin-top: 40px;
-}
-
 .product__img {
-  max-width: 700px;
-}
-
-img {
-  max-width: 100%;
-}
-
-.img1 {
-  grid-area: img1;
-}
-
-.img2 {
-  grid-area: img2;
-  max-width: 150px;
-}
-
-.img3 {
-  grid-area: img3;
-  max-width: 150px;
+  max-width: 300px;
+  margin: 40px auto;
 }
 
 .seasonal-autumn {
-  max-width: 500px;
+  max-width: 300px;
   display: flex;
-  margin-top: 50px;
+  margin: 0 auto;
 }
 
 .seasonal-autumn > * {
@@ -93,4 +65,55 @@ select {
   display: flex;
   flex: 1;
   flex-direction: column;
+}
+
+/*************/
+.product-details__image{
+  background-size: cover;
+  background-position:center;
+  height: 350px;
+  width: 250px;
+}
+
+.cart-wrapper{
+  position: fixed;
+  right: 0;
+  top: 200px;
+  background-color: white;
+  max-width: 300px;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid rgba(128, 128, 128, 0.418);
+  box-shadow: 1px 1px 3px 1px rgb(226, 225, 225);
+}
+
+.cart{
+  padding: 10px 20px;
+  display: flex;
+  flex-direction: row;
+}
+
+.cart-description{
+  margin-left: 20px;
+}
+
+.cart-description_items{
+  font-weight: normal;
+}
+
+.fa-times{
+  margin-top: 20px;
+  margin-left: 10px;
+}
+
+.fa-times:hover{
+  cursor: pointer;
+}
+
+.cart-image{
+  background-size: cover;
+  background-position: center;
+  height: 150px;
+  width: 100px;
+  margin-top: 10px;
 }
