--- a/css/contact.css
+++ b/css/contact.css
@@ -11,6 +11,13 @@
   position: relative;
 }
 
+.contact__form{
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 20px;
+  margin: 30px 20px 40px 20px;
+}
+
 @keyframes info {
   0% {
     top: 60px;
@@ -31,7 +38,9 @@ textarea {
   border-radius: 5px;
   margin: 10px 10px 10px 0px;
   padding: 10px;
+  width: 94%;
 }
+
 
 textarea {
   min-height: 80px;
@@ -46,4 +55,25 @@ fieldset {
   flex: 1;
   flex-direction: column;
   padding-top: 15px;
+}
+
+.form-error {
+  display: none;
+  color: var(--color-yellow);
+  margin-bottom: 6px;
+}
+
+.checkbox-wrapper input {
+  margin:0px;
+  width: 13px;
+  padding: 10px;
+}
+
+.button-wrapper {
+  text-align: center;
+}
+
+.button-wrapper button{
+  padding: 5px;
+  border-radius: 5px;
 }
