--- a/css/media.css
+++ b/css/media.css
@@ -90,6 +90,10 @@
     gap: 30px;
   }
 
+  .shopping-bag__main {
+    margin: 20px 50px;
+  }
+
   /* Contact us */
   .contact__main {
     display: flex;
@@ -98,9 +102,9 @@
     padding: 0px 50px;
   }
 
-  .contact__info,
   .contact__form {
-    padding: 0px 25px;
+    margin: 0px;
+    max-width: 500px;
   }
 
   /* Favorites */
@@ -133,10 +137,6 @@
 }
 
 @media (min-width: 800px) {
-  /* Shopping-bag */
-  .shopping-bag__main {
-    margin: 100px;
-  }
 
   .product-added {
     display: flex;
@@ -175,6 +175,11 @@
 }
 
 @media (min-width: 1100px) {
+  /* Shopping-bag */
+  .shopping-bag__main {
+    margin: 100px;
+  }
+  
   header {
     display: flex;
     justify-content: space-between;
