--- a/css/shopping-bag.css
+++ b/css/shopping-bag.css
@@ -7,13 +7,24 @@ h1 {
   margin: 50px 0px;
 }
 
+.empty-bag{
+  padding: 20px;
+  font-size: 0.9rem;
+  color: gray;
+  font-weight: normal;
+}
 .product__info,
 .summmary__section {
   flex: 1;
 }
 
+.product__wrapper{
+  border: 1px solid gray;
+}
+
 .product-added {
-  border: 1px solid black;
+  border-bottom: 1px solid gray;
+  padding: 10px 0px;
 }
 
 .product-added img {
@@ -50,6 +61,7 @@ select {
   display: flex;
   flex-direction: column;
   margin-top: 50px;
+  max-width: 400px;
 }
 
 .summary {
@@ -70,4 +82,11 @@ select {
   text-align: center;
   margin-top: 10px;
   padding: 10px;
+}
+
+.shopping-cart__img{
+  background-size: cover;
+  background-position: center;
+  height: 100px;
+  width: 80px;
 }
