--- a/css/product.css
+++ b/css/product.css
@@ -1,7 +1,7 @@
 /** @format */
 
 .seasonal-autumn__main {
-  margin: 20px;
+  margin: 20px 0px 50px 0px;
 }
 
 .product__links {
@@ -50,7 +50,7 @@
 
 select {
   padding: 5px;
-  margin: 10px 0px 10px 0px;
+  margin: 20px 0px 10px 0px;
   border-radius: 20px;
   border: 1px solid black;
   font-weight: bold;
@@ -121,4 +121,9 @@ select {
   display: none;
   color: red;
   margin-bottom: 10px;
+}
+
+/* discount */
+.detail-price{
+  font-size: 16px;
 }
