--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,22 @@
 
 @import "imports/links.css";
 @import "imports/variables.css";
+html,
+body {
+  height: 100%;
+}
 
 body {
+  display: flex;
+  flex-direction: column;
   font-family: "Lucida Grande", "Lucida Sans", "Lucida Sans Regular", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 1em;
   margin: 0px;
   padding: 0px;
+}
+
+.wrapper {
+  flex: 1 0 auto;
 }
 
 h1 {
@@ -67,7 +77,7 @@ nav li {
 }
 
 /* Popular products */
-.popular-section h2{
+.popular-section h2 {
   text-align: center;
   border-width: 0px 0px 1px 0px;
   border-style: solid;
@@ -85,14 +95,18 @@ nav li {
   font-size: 0.9em;
 }
 
-.product, .product1, .product2, .product3, .product4{
+.product,
+.product1,
+.product2,
+.product3,
+.product4 {
   text-align: center;
   position: relative;
 }
 
-.product-image{
+.product-image {
   background-size: cover;
-  background-position:center;
+  background-position: center;
   height: 300px;
   width: 200px;
   margin: 0 auto;
@@ -141,14 +155,14 @@ footer a {
 }
 
 /* links */
-.discount-tag{
+.discount-tag {
   position: absolute;
   top: 0px;
   right: 25px;
   max-height: 100px;
 }
 
-.discount-price{
+.discount-price {
   position: absolute;
   z-index: 1000;
   top: 0px;
@@ -157,17 +171,17 @@ footer a {
   font-size: 20px;
 }
 
-.price-message{
+.price-message {
   display: flex;
   justify-content: center;
 }
 
-.oldPrice{
+.oldPrice {
   text-decoration-line: line-through;
-  margin:0px 10px 0px 0px;
+  margin: 0px 10px 0px 0px;
 }
 
-.newPrice{
+.newPrice {
   color: red;
   margin: 0px;
 }
