--- a/css/payment.css
+++ b/css/payment.css
@@ -41,11 +41,11 @@
   flex-direction: column;
 }
 
-.payment-info h2{
+.payment-info h2 {
   text-align: center;
 }
 
-#paymentForm{
+#paymentForm {
   padding: 30px;
   overflow: hidden;
 }
@@ -55,8 +55,25 @@ input {
   padding: 7px 0px;
 }
 
+::-webkit-input-placeholder {
+  /* WebKit browsers */
+  padding-left: 0.5rem;
+}
+:-moz-placeholder {
+  /* Mozilla Firefox 4 to 18 */
+  padding-left: 0.5rem;
+}
+::-moz-placeholder {
+  /* Mozilla Firefox 19+ */
+  padding-left: 0.5rem;
+}
+:-ms-input-placeholder {
+  /* Internet Explorer 10+ */
+  padding-left: 0.5rem;
+}
+
 .payment-checkbox {
-  margin: 10px 0px;
+  margin: 1rem 0rem 2rem 0rem;
 }
 
 .payment-cta {
@@ -72,12 +89,13 @@ input {
   max-width: 100%;
 }
 
-.mm-yy{
-  display:flex;
+.mm-yy {
+  display: flex;
+  justify-content: space-between;
 }
 
-.mm-yy >*{
-  flex: 1;
+.mm-yy > * {
+  width: 50%;
 }
 
 #month {
